k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edusphere-service
  labels:
    app: edusphere
spec:
  type: ClusterIP
  selector:
    app: edusphere
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
